--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Spork-TKSlide
-version:      0.04_1
-version_from: 
+version:      0.05
+version_from: lib/Spork/TKSlide.pm
 installdirs:  site
 requires:
     Spork:                         0.16
